sfdx-source/force-app/main/default/objects/Lead/fields/POSSystem__c.field-meta.xml
<CustomField>
    <fullName>POSSystem__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It stores the value when the restaurant has a POS system.</description>
    <inlineHelpText>Used when the Rx has a POS system</inlineHelpText>
    <label>POS System?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>AccuPOS</fullName>
            </value>
            <value>
                <fullName>Aldelo POS</fullName>
            </value>
            <value>
                <fullName>Aloha NCR</fullName>
            </value>
            <value>
                <fullName>Amber Systems Technology</fullName>
            </value>
            <value>
                <fullName>Arrow POS</fullName>
            </value>
            <value>
                <fullName>Auphan</fullName>
            </value>
            <value>
                <fullName>Brilliant POS</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
            <value>
                <fullName>Casio</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Champion POS</fullName>
            </value>
            <value>
                <fullName>Clover</fullName>
            </value>
            <value>
                <fullName>Cluster</fullName>
            </value>
            <value>
                <fullName>Comtrex</fullName>
            </value>
            <value>
                <fullName>Crisp</fullName>
            </value>
            <value>
                <fullName>Custom Propietary POS</fullName>
            </value>
            <value>
                <fullName>Dig Inn</fullName>
            </value>
            <value>
                <fullName>Digital Dining</fullName>
            </value>
            <value>
                <fullName>Dinerware</fullName>
            </value>
            <value>
                <fullName>Exa Touch</fullName>
            </value>
            <value>
                <fullName>Figure POS</fullName>
            </value>
            <value>
                <fullName>Focus POS</fullName>
            </value>
            <value>
                <fullName>FoodTech</fullName>
            </value>
            <value>
                <fullName>Future POS</fullName>
            </value>
            <value>
                <fullName>Givex</fullName>
            </value>
            <value>
                <fullName>HarbourTouch</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>HungerRush</fullName>
            </value>
            <value>
                <fullName>InTouchPOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>