sfdx-source/force-app/main/default/objects/Lead/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It represents Primary Language used by the Lead.</description>
    <inlineHelpText>Primary Language used by the Lead</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Language_Values</valueSetName>
    </valueSet>
</CustomField>