sfdx-source/force-app/main/default/objects/Lead/fields/PriceTier__c.field-meta.xml
<CustomField>
    <fullName>PriceTier__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618,14733: It depicts price range that will be used to establish # of dollar signs on DoorDash App.</description>
    <inlineHelpText>Price Range of the Mx on a scale of $ to $$$$</inlineHelpText>
    <label>Price Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>$$</fullName>
            </value>
            <value>
                <fullName>$$$</fullName>
            </value>
            <value>
                <fullName>$$$$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>