sfdx-source/force-app/main/default/objects/Lead/fields/Primary_Campaign_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15472: It represents the Primary Campaign Source Name.</description>
    <formula>Primary_Campaign_Source__r.Name</formula>
    <label>Primary Campaign Source Name</label>
    <type>Text</type>
</CustomField>