sfdx-source/force-app/main/default/objects/Lead/fields/PrimaryVertical__c.field-meta.xml
<CustomField>
    <fullName>PrimaryVertical__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13415,13618: It defines the primary vertical of the SMB.</description>
    <label>Primary Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Vertical</valueSetName>
    </valueSet>
</CustomField>