sfdx-source/force-app/main/default/objects/Lead/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14727: It stores provider type from SSMO on Lead.</description>
    <label>Provider Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>