sfdx-source/force-app/main/default/objects/Lead/fields/Raw_Address__c.field-meta.xml
<CustomField>
    <fullName>Raw_Address__c</fullName>
    <description>LEM-21532: It is used to store the address as inputted from the Mx regardless of if the address was verified or not.</description>
    <label>Raw Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <complianceGroup>GDPR</complianceGroup>
</CustomField>