sfdx-source/force-app/main/default/objects/Lead/fields/Required_fields__c.field-meta.xml
<CustomField>
  <fullName>Required_fields__c</fullName>
  <description>LEM-14086: It is created to store the information about required fields being populated on Lead.</description>
  <formula>OR(
  ISBLANK(TEXT(LeadSource)),
  ISBLANK(TEXT(PrimaryVertical__c))
  )</formula>
  <label>Required Fields</label>
  <type>Checkbox</type>
</CustomField>