sfdx-source/force-app/main/default/objects/Lead/fields/SDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14186: It indicates the SDR Owner.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>Indicates the SDR Owner</inlineHelpText>
    <label>SDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>