sfdx-source/force-app/main/default/objects/Lead/fields/SecondaryLanguage__c.field-meta.xml
<CustomField>
    <fullName>SecondaryLanguage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It represents Secondary Language used by the Lead.</description>
    <inlineHelpText>Secondary Language used by the Lead</inlineHelpText>
    <label>Secondary Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>