sfdx-source/force-app/main/default/objects/Lead/fields/SecondaryPhone__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPhone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It represents additional phone number for the Lead.</description>
    <inlineHelpText>Additional phone number for the Lead</inlineHelpText>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>