sfdx-source/force-app/main/default/objects/Lead/fields/Self_Serve_Step__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve_Step__c</fullName>
    <description>LEM-14186: It indicates the Self Serve Step where the Mx dropped off in Self Serve Process.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>Indicates the Self Serve Step where the Mx dropped off in Self Serve Process</inlineHelpText>
    <label>Self Serve Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Order Protocol</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Pricing Plan</fullName>
            </value>
            <value>
                <fullName>Banking Information</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Store Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>