sfdx-source/force-app/main/default/objects/Lead/fields/SMS_Opted_Out__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opted_Out__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-17656: It is used to indicate if Mx has opted out of SMS.</description>
    <defaultValue>false</defaultValue>
    <label>SMS Opted Out</label>
    <type>Checkbox</type>
</CustomField>