sfdx-source/force-app/main/default/objects/Lead/fields/SocialMediaURL__c.field-meta.xml
<CustomField>
    <fullName>SocialMediaURL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It stores social media URL of the Lead.</description>
    <label>Social Media URL</label>
    <type>Url</type>
</CustomField>