sfdx-source/force-app/main/default/objects/Lead/fields/SSMO_Matching_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>SSMO_Matching_Account_Id__c</fullName>
    <description>LEM-14819: It is used to Store the matching account Id received in payload on SSMO fallout.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>SSMO Matching Account Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>