sfdx-source/force-app/main/default/objects/Lead/fields/SSMO_UUID__c.field-meta.xml
<CustomField>
    <fullName>SSMO_UUID__c</fullName>
    <description>LEM-14186: It stores the SSMO UUID a unique identifier assigned to Salesforce records.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>This field stores the SSMO UUID a unique identifier assigned to Salesforce records</inlineHelpText>
    <label>SSMO UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>