sfdx-source/force-app/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14069: It is a backend field which stores Stage value on Lead.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>