sfdx-source/force-app/main/default/objects/Lead/fields/Starting_Point__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13402: It represents the starting point of the Lead.</description>
    <inlineHelpText>Indicates the starting point of the Lead</inlineHelpText>
    <label>Starting Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>