sfdx-source/force-app/main/default/objects/Lead/fields/Starting_Point_ID__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13402: It represents the Starting Point ID of the Lead.</description>
    <inlineHelpText>Indicates the Starting Point ID of the Lead</inlineHelpText>
    <label>Starting Point ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>