sfdx-source/force-app/main/default/objects/Lead/fields/Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Store_ID__c</fullName>
    <description>LEM-14186: It represents the Store Id that was provisioned during the SSMO process.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>The Store Id that was provisioned during the SSMO process</inlineHelpText>
    <label>Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>