sfdx-source/force-app/main/default/objects/Lead/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14069: It is a backend field which stores sub-type value on Lead.</description>
    <label>Sub-Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>