sfdx-source/force-app/main/default/objects/Lead/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13402: It represents the sub-market of the Lead and would be populated by Mulesoft.</description>
    <inlineHelpText>Indicates the submarket of the Lead</inlineHelpText>
    <label>Sub-Market</label>
    <referenceTo>Submarket__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>