sfdx-source/force-app/main/default/objects/Lead/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14904: It represents the total monetary value of the potential market size.</description>
    <inlineHelpText>Total Addressable Market (TAM) represents the total monetary value of the potential market size</inlineHelpText>
    <label>TAM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>