sfdx-source/force-app/main/default/objects/Lead/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13514: It stores the abbreviated timezone value automatically calculated from timezone populated by Mulesoft.</description>
    <inlineHelpText>Indicates the time zone of the lead</inlineHelpText>
    <label>Time Zone</label>
    <length>5</length>
    <type>Text</type>
</CustomField>