sfdx-source/force-app/main/default/objects/Lead/fields/Total_SKUs_for_sale__c.field-meta.xml
<CustomField>
    <fullName>Total_SKUs_for_sale__c</fullName>
    <description>LEM-14186: It indicates count of Total SKUs for sale.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>Indicates count of Total SKUs for sale</inlineHelpText>
    <label>Total SKU's for sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>