sfdx-source/force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14069: It is a backend field which stores Type value on Lead.</description>
    <label>Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>