sfdx-source/force-app/main/default/objects/Lead/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>LEM-17453: It is stores the SSMO unique Id received by Mulesoft in each payload for this Lead.</description>
    <label>SSMO Transactional Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>