sfdx-source/force-app/main/default/objects/Lead/validationRules/Validate_Address_for_Lead_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Address_For_Lead_Conversion</fullName>
    <active>true</active>
    <description>LEM-14086,LEM-14733 : It validates address fields required in order to convert Lead.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Lead_Validation_Rules),
  ISCHANGED(IsConverted),
  IsConverted,
  OR(
  TEXT(Coverage__c)&lt;&gt; $Label.InCoverage,
  TEXT(Address_Verification_Status__c)&lt;&gt; $Label.Verified,
  TEXT(Duplicate_Status__c)&lt;&gt; $Label.NonDuplicate
  )
)</errorConditionFormula>
    <errorMessage>The Coverage on the lead should be “In Coverage”,Address Verification status should be “Verified”, and Duplicate Status should be "Non-Duplicate" to convert Lead into Account, Opportunity &amp; Contact.</errorMessage>
</ValidationRule>