sfdx-source/force-app/main/default/objects/Lead/validationRules/Validate_Disposition_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Disposition_Reason_Required</fullName>
    <active>true</active>
    <description>LEM-13419: It validates Disposition Reason required for Disqualified Lead.</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Lead_Validation_Rules),
    OR(
      ISCHANGED(Status),
      ISCHANGED(Disposition_Reason__c),
      ISNEW()
    ),
    TEXT(Status) =  $Label.LeadStatusDisqualified,
    ISBLANK(TEXT(Disposition_Reason__c)
    )
)</errorConditionFormula>
    <errorMessage>Disposition Reason must be populated when the lead status is Disqualified. Please update before saving.</errorMessage>
</ValidationRule>