sfdx-source/force-app/main/default/objects/Lead/validationRules/Validate_Email_Verification_Dependency.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Email_Verification_Dependency</fullName>
    <active>true</active>
    <description>LEM-13618: It ensures email verification status should not be populated unless Email is populated.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Lead_Validation_Rules),
  ISBLANK(Email),
  NOT(ISBLANK(TEXT(EmailVerificationStatus__c)))
)</errorConditionFormula>
    <errorDisplayField>EmailVerificationStatus__c</errorDisplayField>
    <errorMessage>“Email Verification Status” field can only be completed if “Email” field is populated.</errorMessage>
</ValidationRule>