sfdx-source/force-app/main/default/objects/Lead/validationRules/Validate_Phone_Or_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone_Or_Email_Required</fullName>
    <active>true</active>
    <description>LEM-13415: It is used to check whetherEmail or Phone is populated on Lead or not.</description>
    <errorConditionFormula>AND(
      NOT($Permission.Bypass_Lead_Validation_Rules),
      ISBLANK(Email),
      ISBLANK(Phone)
    )</errorConditionFormula>
    <errorMessage>Please enter minimum required information i.e.Email OR Phone.</errorMessage>
</ValidationRule>